# gst-wayland-display

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-format.yml
c-bindings/: Cargo.toml
c-bindings/src/: capi.rs
gst-plugin-wayland-display/: Cargo.toml
gst-plugin-wayland-display/src/: lib.rs
gst-plugin-wayland-display/src/waylandsrc/: imp.rs  mod.rs
wayland-display-core/: Cargo.toml  build.rs
wayland-display-core/src/: lib.rs
wayland-display-core/src/comp/: input.rs  mod.rs  rendering.rs
wayland-display-core/src/tests/: client.rs  device.rs  fixture.rs  input_test.rs  mod.rs
wayland-display-core/src/utils/: mod.rs  target.rs  video_info.rs
wayland-display-core/src/utils/allocator/: gst_cuda_ffi.rs  mod.rs
wayland-display-core/src/utils/allocator/cuda/: ffi.rs  mod.rs
wayland-display-core/src/utils/device/: gpu.rs
wayland-display-core/src/wayland/handlers/: compositor.rs  pointer_constraints.rs
wayland-display-core/src/wayland/protocols/: wl_drm.rs
