[workspace]
resolver = "2"
members = [
    ".",
    "c-bindings",
    "wayland-display-core",
    "gst-plugin-wayland-display"
]

[workspace.dependencies]
gst = { version = "0.23.2", package = "gstreamer", features = ["v1_24"] }
gst-video = { version = "0.23.2", package = "gstreamer-video", features = ["v1_24"] }
tracing = "0.1.37"
once_cell = "1.17.0"
